--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(SSD.SE)
 export(STARR)
 export(STARR.SE)
 export(SharpeRatio.SE)
+export(SoR)
 export(SoR.const)
 export(SoR.mean)
 export(SortinoRatio.SE)
@@ -38,8 +39,8 @@ export(VaR.hist)
 export(myperiodogram)
 export(nse.nw)
 export(printSE)
-import(IFs)
 import(PerformanceAnalytics)
+import(RPEIF)
 import(sandwich)
 import(xts)
 import(zoo)
