--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,19 @@
 language: r
 cache: packages
 
-r_github_packages:
-  - jimhester/covr
-
-after_success:
-  - Rscript -e 'covr::coveralls()'
+matrix:
+  include:
+    - os: linux
+      r: release
+      sudo : false
+    - os: linux
+      r: devel
+      sudo : false
+    - os: osx
+      latex: false
+      r: devel
+    - os: osx
+      latex: false
+      r: release
+  allow_failures:
+    - os: osx
