--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,24 @@
 Package: RPESE
 Type: Package
-Title: Risk/Performance Measure Estimator Standard Error
+Title: Computation of Estimates of Standard Errors for Risk and Performance Measures
 Version: 1.0
-Authors@R: c(
-    person("Xin", "Chen", email = "chenx26@uw.edu", role = c("aut", "cre")),
-    person("Anthony-Alexander", "Christidis", email = "anthony.christidis@stat.ubc.ca", role = c("aut")))
-Description: This package contains functions to compute the standard error of
-    popular risk/performance measures using different methods.
-License: GPL-3
-LazyData: TRUE
+Date: 2019-10-26
+Author: Anthony Christidis <anthony.christidis@stat.ubc.ca>, 
+  Xin Chen <chenx26@uw.edu>
+Maintainer: Anthony Christidis <anthony.christidis@stat.ubc.ca>
+Description: Computes estimates of standard errors of popular risk and performance 
+             measures for asset or portfolio returns using methods as described in 
+             Chen and Martin (2019) <https://ssrn.com/abstract=3085672>.
+Biarch: true
+License: GPL (>= 2)
 Imports:
     RPEIF,
+    RPEGLMEN,
     PerformanceAnalytics
 Suggests:
     testthat, R.rsp
 Depends:
-    xts, zoo, robustbase, boot, RPEGLMEN, sandwich
+    xts, zoo, robustbase, boot, sandwich
 RoxygenNote: 6.1.1
 VignetteBuilder: R.rsp
+LazyData: true
