--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,8 @@ export(EstimatorSE)
 export(LPM.SE)
 export(Mean.SE)
 export(OmegaRatio.SE)
-export(Rachev.SE)
-export(SSD.SE)
+export(RachevRatio.SE)
+export(SemiSD.SE)
 export(SharpeRatio.SE)
 export(SortinoRatio.SE)
 export(StdDev.SE)
@@ -15,7 +15,12 @@ export(VaR.SE)
 export(VaRratio.SE)
 export(printSE)
 import(PerformanceAnalytics)
+import(RPEGLMEN)
 import(RPEIF)
+import(boot)
+import(robustbase)
+import(sandwich)
+import(stats)
 import(xts)
 import(zoo)
 importFrom(stats,sd)
