--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,8 +20,16 @@ import(RPEIF)
 import(boot)
 import(robustbase)
 import(sandwich)
-import(stats)
 import(xts)
 import(zoo)
+importFrom(stats,SSD)
+importFrom(stats,ar)
+importFrom(stats,arima)
+importFrom(stats,coef)
+importFrom(stats,cov)
+importFrom(stats,fft)
+importFrom(stats,lm)
+importFrom(stats,na.omit)
+importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(utils,packageDescription)
