--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,11 +17,10 @@ export(printSE)
 import(PerformanceAnalytics)
 import(RPEGLMEN)
 import(RPEIF)
-import(boot)
-import(robustbase)
-import(sandwich)
 import(xts)
 import(zoo)
+importFrom(boot,boot)
+importFrom(boot,tsboot)
 importFrom(stats,SSD)
 importFrom(stats,ar)
 importFrom(stats,arima)
@@ -33,3 +32,5 @@ importFrom(stats,na.omit)
 importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(utils,packageDescription)
+importFrom(xts,is.xts)
+importFrom(zoo,zoo)
