--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: RPESE
 Type: Package
-Title: Computation of Estimates of Standard Errors for Risk and Performance Measures
+Title: Estimates of Standard Errors for Risk and Performance Measures
 Version: 1.0
 Date: 2019-10-26
 Author: Anthony Christidis <anthony.christidis@stat.ubc.ca>, 
   Xin Chen <chenx26@uw.edu>
 Maintainer: Anthony Christidis <anthony.christidis@stat.ubc.ca>
-Description: Computes estimates of standard errors of popular risk and performance 
+Description: Estimates of standard errors of popular risk and performance 
              measures for asset or portfolio returns using methods as described in 
              Chen and Martin (2019) <https://ssrn.com/abstract=3085672>.
 Biarch: true
