Fix StdDev.SE, SortinoRatio.SE and VaRratio.SE functions. Also add new option to return the correlations of returns and IF transformed returns.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ import(zoo)
 importFrom(boot,boot)
 importFrom(boot,tsboot)
 importFrom(stats,SSD)
+importFrom(stats,acf)
 importFrom(stats,ar)
 importFrom(stats,arima)
 importFrom(stats,coef)
