--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: RPESE
 Type: Package
 Title: Estimates of Standard Errors for Risk and Performance Measures
-Version: 1.0.5
-Date: 2020-06-18
+Version: 1.1.0
+Date: 2020-10-23
 Author: Anthony Christidis <anthony.christidis@stat.ubc.ca>, 
   Xin Chen <chenx26@uw.edu>
 Maintainer: Anthony Christidis <anthony.christidis@stat.ubc.ca>
 Description: Estimates of standard errors of popular risk and performance 
              measures for asset or portfolio returns using methods as described in 
-             Chen and Martin (2019) <https://ssrn.com/abstract=3085672>.
+             Chen and Martin (2018) <https://www.ssrn.com/abstract=3085672>.
 Biarch: true
 License: GPL (>= 2)
 Imports:
@@ -18,7 +18,6 @@ Imports:
     sandwich,
     RPEIF,
     RPEGLMEN,
-    PerformanceAnalytics
 Suggests:
     testthat, R.rsp
 Depends:
