--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,9 @@ export(SoR.SE)
 export(VaR.SE)
 export(VaRratio.SE)
 export(printSE)
+export(robLoc.SE)
 import(RPEIF)
+import(RobStatTM)
 import(xts)
 import(zoo)
 importFrom(boot,boot)
