Update robust mean function name, and change default SE methods for performance measures (Adaptive -> PW).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ export(SoR.SE)
 export(VaR.SE)
 export(VaRratio.SE)
 export(printSE)
-export(robLoc.SE)
+export(robMean.SE)
 import(RPEIF)
 import(RobStatTM)
 import(xts)
