--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: RPESE
 Type: Package
 Title: Estimates of Standard Errors for Risk and Performance Measures
-Version: 1.2.3
-Date: 2021-06-08
+Version: 1.2.4
+Date: 2021-09-20
 Author: Anthony Christidis <anthony.christidis@stat.ubc.ca>, 
   Xin Chen <chenx26@uw.edu>
 Maintainer: Anthony Christidis <anthony.christidis@stat.ubc.ca>
 Description: Estimates of standard errors of popular risk and performance 
              measures for asset or portfolio returns using methods as described in 
-             Chen and Martin (2018) <https://www.ssrn.com/abstract=3085672>.
+             Chen and Martin (2021) <doi:10.21314/JOR.2020.446>.
 Biarch: true
 License: GPL (>= 2)
 Imports:
@@ -23,6 +23,5 @@ Suggests:
     R.rsp,
     PerformanceAnalytics
 Depends:
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.1
 VignetteBuilder: R.rsp
-
