--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,21 @@
 Package: RPESE
 Type: Package
 Title: Estimates of Standard Errors for Risk and Performance Measures
-Version: 1.2.5
-Date: 2022-09-07
-Author: Anthony Christidis <anthony.christidis@stat.ubc.ca>, 
-  Xin Chen <chenx26@uw.edu>
-Maintainer: Anthony Christidis <anthony.christidis@stat.ubc.ca>
+Version: 1.2.7
+Date: 2025-12-18
+Authors@R: c(
+    person(given = "Anthony",
+           family = "Christidis",
+           role = c("aut", "cre"),
+           email = "anthony.christidis@stat.ubc.ca"),
+    person(given = "Xin",
+           family = "Chen",
+           role = "aut",
+           email = "chenx26@uw.edu"))
 Description: Estimates of standard errors of popular risk and performance 
              measures for asset or portfolio returns using methods as described in 
              Chen and Martin (2021) <doi:10.21314/JOR.2020.446>.
+Encoding: UTF-8
 Biarch: true
 License: GPL (>= 2)
 Imports:
@@ -23,5 +30,5 @@ Suggests:
     R.rsp,
     PerformanceAnalytics
 Depends:
-RoxygenNote: 7.2.1
+RoxygenNote: 7.3.2
 VignetteBuilder: R.rsp
